--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0"
+    "@testing-library/user-event": "^12.5.0",
+    "eslint": "^7.15.0"
   }
 }
